--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\namoz\OneDrive\Рабочий стол\Web Development\HTML - Personal Site\Images\MyPersonalPic.png" alt="Namoz Muhammadkarim"></td>
+      <td><img src="Images\MyPersonalPic.png" alt="Namoz Muhammadkarim"></td>
       <td><h1>Namoz Muhammadkarim</h1>
       <p><em>Software Engineer and Student of <a href="https://www.cbnu.ac.kr/site/english/main.do"><strong>CBNU</strong></a>.</em></p>
       <p><em>Department of Computer Science</em></p>
