--- a/About-Quran.html
+++ b/About-Quran.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <center>
-      <img src="C:\Users\namoz\OneDrive\Рабочий стол\Web Development\HTML - Personal Site\Images\Quranbook.png" alt="Quran" width="600" height="500">
+      <img src="Images\Quranbook.png" alt="Quran" width="600" height="500">
 <h1>Quran</h1>
     <p><em>The Quran, also romanized Qur'an or Koran, is the central religious text of Islam, believed by Muslims to be a revelation from God. It is organized in 114 chapters, which consist of verses.</em></p>
 
